NIAD-2869: mapping author and participant to recorder and asserter in JSON bundle (#335)
* mapping author and participant to recorder and asserter in allergy intolerance

* adding an additional test to cover some potential non-standard scenarios

* xml checkstyle improvement

* xml file checkstyle improvement

* adding some extra space for better readability of code

* fixing checkstyle issue

* checkstyle fix

* adjusting values for tests

* adding changelog